<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/historyClaimTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/claim_title"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/historyClaimIDTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/historyClaimTitleTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="3dp"
        android:text="@string/claim_id"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="229dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/historyClaimTitleTextView"
        android:text="@string/forwardsArrowTMP" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/historyClaimIDTextView"
        android:layout_marginBottom="-13dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />

</RelativeLayout>