<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/birthDateField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="52dp"
        android:text="@string/birth_date"
        android:textColor="#5a5a5a"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_date"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/addressField"
        android:layout_width="238dp"
        android:layout_height="72dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="336dp"
        android:text="@string/address"
        android:textColor="#5a5a5a"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/address"
        android:layout_width="55dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/address"
        android:textColor="#5a5a5a"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namespace"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/birth_date"
        android:textColor="#5a5a5a"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namespace"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/policynumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/policy_number"
        android:textColor="#5a5a5a"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namespace"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/namespace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textColor="#5a5a5a"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/fiscalnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fiscal_number"
        android:textColor="#5a5a5a"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namespace"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/nameField"
        android:layout_width="158dp"
        android:layout_height="21dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="48dp"
        android:text="@string/firstname_lastname"
        android:textColor="#5a5a5a"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/fiscalnumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namespace"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fiscalNumberField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fiscal_number"
        android:textColor="#5a5a5a"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/policynumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiscalnumber"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/policyNumberField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="302dp"
        android:layout_marginBottom="32dp"
        android:text="@string/policy_number"
        android:textColor="#5a5a5a"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/birth_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/policynumber"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>